--- a/index.html
+++ b/index.html
@@ -488,11 +488,11 @@
             </div>
             
             <div class="featured-info">
-                <div class="featured-title" id="featured-ep-title">第三集《万敌，你为什么戴蓝宝石耳坠》</div>
+                <div class="featured-title" id="featured-ep-title">万敌，你为什么戴蓝宝石耳坠</div>
                 <div class="featured-tags">
-                    <span class="tag">翁法罗斯</span>
-                    <span class="tag">崩坏：星穹铁道</span>
-                    <span class="tag">万敌</span>
+                    <span class="tag">永劫回归33550337</span>
+                    <span class="tag">亡妻回忆录</span>
+                    <span class="tag">（划掉）</span>
                 </div>
             </div>
         </section>
@@ -543,8 +543,8 @@
                 <i class="fas fa-book"></i>
             </div>
             <h3 id="footer-title">拥抱黎明的图书馆</h3>
-            <p id="footer-description">翁法罗斯二创作品集 | 管理员: Uryan</p>
-            <p class="copyright" id="footer-copyright">© 2025 拥抱黎明的图书馆 | 本网站为崩坏：星穹铁道同人作品展示网站</p>
+            <p id="footer-description">翁法罗斯二创作品集 | 管理员: 伊水_Uryan</p>
+            <p class="copyright" id="footer-copyright">© 2025 拥抱黎明的图书馆 | 本网站为Uryan的崩铁翁星同人收集网站</p>
         </div>
     </footer>
     
@@ -557,8 +557,8 @@
                 adminText: "管理员: ",
                 siteDescription: "翁法罗斯二创作品集",
                 footerTitle: "拥抱黎明的图书馆",
-                footerDescription: "翁法罗斯二创作品集 | 管理员: Uryan",
-                footerCopyright: "© 2025 拥抱黎明的图书馆 | 本网站为崩坏：星穹铁道同人作品展示网站",
+                footerDescription: "翁法罗斯二创作品集 | 管理员: 伊水_Uryan",
+                footerCopyright: "© 2025 拥抱黎明的图书馆 | 本网站为Uryan的崩铁翁星同人收集网站",
                 featuredTitle: "最新动画",
                 episodesTitle: "图书馆的影音库",
                 illustrationsTitle: "图书馆的藏画馆",
@@ -567,16 +567,16 @@
                 categoryAll: "全部",
                 categorySerious: "正经插画",
                 categoryMeme: "梗图",
-                featuredVideoTitle: "第三集《万敌，你为什么戴蓝宝石耳坠》",
-                featuredEpTitle: "第三集《万敌，你为什么戴蓝宝石耳坠》",
+                featuredVideoTitle: "万敌，你为什么戴蓝宝石耳坠",
+                featuredEpTitle: "万敌，你为什么戴蓝宝石耳坠",
                 episodes: [
                     {
                         id: 1,
-                        title: "第一集《万敌，我要去当祭品了》",
+                        title: "万敌，我要去当祭品了",
                         storyOrder: 1,
                         updateDate: "2025年05月05日",
                         updateDateISO: "2025-05-05",
-                        tags: ["翁法罗斯", "崩坏：星穹铁道", "万敌"],
+                        tags: [],
                         chineseLink: "https://www.bilibili.com/video/BV1EUVqzpEnh/",
                         englishLink: "https://x.com/UryanKarl/status/1919328501749998045",
                         bvid: "BV1EUVqzpEnh",
@@ -584,7 +584,7 @@
                     },
                     {
                         id: 2,
-                        title: "第二集《万敌和白厄是什么关系》",
+                        title: "万敌和白厄连挚友都算不上",
                         storyOrder: 2,
                         updateDate: "2025年04月28日",
                         updateDateISO: "2025-04-28",
@@ -655,13 +655,13 @@
                 ]
             },
             en: {
-                siteTitle: "Library of Dawn's Embrace",
+                siteTitle: "Library of MyDawn ",
                 siteSubtitle: "拥抱黎明的图书馆",
                 adminText: "Admin: ",
-                siteDescription: "Amphoreus Fan Creations",
-                footerTitle: "Library of Dawn's Embrace",
-                footerDescription: "Amphoreus Fan Creations | Admin: Uryan",
-                footerCopyright: "© 2025 Library of Dawn's Embrace | This site showcases Honkai: Star Rail fan works",
+                siteDescription: "Amphoreus FanWork",
+                footerTitle: "Library of MyDawn",
+                footerDescription: "Amphoreus FanWork Site | Admin: 伊水_Uryan",
+                footerCopyright: "© 2025 Library of MyDawn | This site showcases Honkai: Star Rail fanworks",
                 featuredTitle: "Latest Animation",
                 episodesTitle: "Library's Video Archive",
                 illustrationsTitle: "Library's Art Gallery",
@@ -670,8 +670,8 @@
                 categoryAll: "All",
                 categorySerious: "Serious Art",
                 categoryMeme: "Meme",
-                featuredVideoTitle: "Episode 3: 'Wandi, Why Are You Wearing Sapphire Earrings?'",
-                featuredEpTitle: "Episode 3: 'Wandi, Why Are You Wearing Sapphire Earrings?'",
+                featuredVideoTitle: "Episode 3: 'Mydei, Why Are You Wearing Sapphire Earrings?'",
+                featuredEpTitle: "Episode 3: 'Mydei, Why Are You Wearing Sapphire Earrings?'",
                 episodes: [
                     {
                         id: 1,
