--- a/index.html
+++ b/index.html
@@ -491,8 +491,8 @@
                 <div class="featured-title" id="featured-ep-title">万敌，你为什么戴蓝宝石耳坠</div>
                 <div class="featured-tags">
                     <span class="tag">永劫回归33550337</span>
-                    <span class="tag">亡妻回忆录</span>
-                    <span class="tag">（划掉）</span>
+                    <span class="tag">万敌的树庭留学记</span>
+                    <span class="tag">（上篇）</span>
                 </div>
             </div>
         </section>
@@ -574,37 +574,85 @@
                         id: 1,
                         title: "万敌，我要去当祭品了",
                         storyOrder: 1,
-                        updateDate: "2025年05月05日",
+                        updateDate: "2025-05-05",
                         updateDateISO: "2025-05-05",
-                        tags: [],
+                        tags: ["别跟万敌开玩笑"],
                         chineseLink: "https://www.bilibili.com/video/BV1EUVqzpEnh/",
                         englishLink: "https://x.com/UryanKarl/status/1919328501749998045",
                         bvid: "BV1EUVqzpEnh",
                         coverImage: "https://pbs.twimg.com/media/GlgyljraoAA_7qR?format=jpg&name=large"
                     },
-                    {
+					{
                         id: 2,
-                        title: "万敌和白厄连挚友都算不上",
+                        title: "万敌，你听说过走马灯吗？",
                         storyOrder: 2,
-                        updateDate: "2025年04月28日",
+                        updateDate: "2025-05-12",
+                        updateDateISO: "2025-05-12",
+                        tags: ["泡澡"],
+                        chineseLink: "https://www.bilibili.com/video/BV1EUVqzpEnh/",
+                        englishLink: "https://x.com/UryanKarl/status/1919328501749998045",
+                        bvid: "BV15PEEzMEiM",
+                        coverImage: "//i1.hdslb.com/bfs/archive/7acbd3d6a013ebe46b4bbc4d55b845b3ddbc6b82.jpg"
+                    },
+                    {
+                        id: 3,
+                        title: "万敌和白厄连挚友都算不上",
+                        storyOrder: 3,
+                        updateDate: "2025-04-28",
                         updateDateISO: "2025-04-28",
-                        tags: ["翁法罗斯", "崩坏：星穹铁道", "万敌", "白厄"],
+                        tags: ["采访"],
                         chineseLink: "https://www.bilibili.com/video/BV1SnLmzME8u/",
                         englishLink: "https://x.com/UryanKarl/status/1917085258551595023",
                         bvid: "BV1SnLmzME8u",
                         coverImage: "https://pbs.twimg.com/media/GlgyljraoAA_7qR?format=jpg&name=large"
                     },
+					{
+                        id: 4,
+                        title: "喂喂，救世主，能看到吗？",
+                        storyOrder: 4,
+                        updateDate: "2025-08-01",
+                        updateDateISO: "2025-08-01",
+                        tags: ["视频通话", "论监控摄像头的妙用"，"3.3万敌剧情补充"],
+                        chineseLink: "https://www.bilibili.com/video/BV1UEb8zXEdn",
+                        englishLink: "https://x.com/UryanKarl/status/1977595873824760010",
+                        bvid: "BV1DVhJzPEE7",
+                        coverImage: "//i1.hdslb.com/bfs/archive/6394917b69efc5102dbda45b82044d25e9158152.jpg"
+                    },
+					{
+                        id: 5,
+                        title: "白厄和万敌算哪门子宿敌啊",
+                        storyOrder: 5,
+                        updateDate: "2025-08-13",
+                        updateDateISO: "2025-08-13",
+                        tags: ["吃播", "微量夏雅"],
+                        chineseLink: "https://www.bilibili.com/video/BV1UEb8zXEdn",
+                        englishLink: "https://x.com/UryanKarl/status/1977595873824760010",
+                        bvid: "BV1UEb8zXEdn",
+                        coverImage: "//i2.hdslb.com/bfs/archive/bf716dda1a857b2eb1a96aed5e0bd538d518cd39.jpg"
+                    },
+					{
+                        id: 6,
+                        title: "哥们！？你是在跟我开玩笑吗！？",
+                        storyOrder: 6,
+                        updateDate: "2025-10-08",
+                        updateDateISO: "2025-10-08",
+                        tags: ["别跟万敌开玩笑", "白厄能怀孕（确信）"],
+                        chineseLink: "https://www.bilibili.com/video/BV1ZCxez3ECk/",
+                        englishLink: "https://x.com/UryanKarl/status/1977595873824760010",
+                        bvid: "BV1ZCxez3ECk",
+                        coverImage: "https://i1.hdslb.com/bfs/archive/1696c57b6c9f93b8e299e19f91094fc29375a349.jpg"
+                    },
                     {
-                        id: 3,
-                        title: "第三集《万敌，你为什么戴蓝宝石耳坠》",
-                        storyOrder: 3,
+                        id: 7,
+                        title: "万敌，你为什么戴蓝宝石耳坠",
+                        storyOrder: 7,
                         updateDate: "2025年11月05日",
                         updateDateISO: "2025-11-05",
-                        tags: ["翁法罗斯", "崩坏：星穹铁道", "万敌", "蓝宝石耳坠"],
+                        tags: ["永劫回归33550337", "万敌的树庭留学记", "（上篇）"],
                         chineseLink: "https://www.bilibili.com/video/BV15N1WBTEb9",
                         englishLink: "https://x.com/UryanKarl/status/1986813834653564935",
                         bvid: "BV15N1WBTEb9",
-                        coverImage: "https://pbs.twimg.com/media/GlgyljraoAA_7qR?format=jpg&name=large"
+                        coverImage: "//i1.hdslb.com/bfs/archive/7d774b1fe22e0e98e9b223707629c2f3661fa62b.jpg"
                     }
                 ],
                 illustrations: [
@@ -614,7 +662,7 @@
                         updateDate: "2025年03月1日",
                         updateDateISO: "2025-03-01",
                         category: "serious",
-                        tags: ["翁法罗斯", "崩坏：星穹铁道", "迈德漠斯"],
+                        tags: ["3.1玩后感"],
                         chineseLink: "https://karl-art.lofter.com/post/1dcc6edf_2bdff323b",
                         englishLink: "https://x.com/UryanKarl/status/1895507738068930788",
                         coverImage: "https://pbs.twimg.com/media/GlgyljraoAA_7qR?format=jpg&name=large"
@@ -625,7 +673,7 @@
                         updateDate: "2025年03月8日",
                         updateDateISO: "2025-03-08",
                         category: "serious",
-                        tags: ["翁法罗斯", "崩坏：星穹铁道", "纯蓝"],
+                        tags: [],
                         chineseLink: "https://karl-art.lofter.com/post/1dcc6edf_2be0d4341",
                         englishLink: "https://x.com/UryanKarl/status/1898323112422433221",
                         coverImage: "https://pbs.twimg.com/media/GlgyljraoAA_7qR?format=jpg&name=large"
