--- a/index.html
+++ b/index.html
@@ -833,7 +833,7 @@
                         chineseLink: "https://www.bilibili.com/video/BV15PEEzMEiM",
                         englishLink: "https://x.com/UryanKarl/status/1921952005532102743",
                         bvid: "BV15PEEzMEiM",
-                        coverImage: "https:////i1.hdslb.com/bfs/archive/7acbd3d6a013ebe46b4bbc4d55b845b3ddbc6b82.jpg"
+                        coverImage: "https://i1.hdslb.com/bfs/archive/7acbd3d6a013ebe46b4bbc4d55b845b3ddbc6b82.jpg"
                     },
                     {
                         id: 3,
@@ -857,7 +857,7 @@
                         chineseLink: "https://www.bilibili.com/video/BV1DVhJzPEE7",
                         englishLink: "https://x.com/UryanKarl/status/1951536670299529344",
                         bvid: "BV1DVhJzPEE7",
-                        coverImage: "https:////i1.hdslb.com/bfs/archive/6394917b69efc5102dbda45b82044d25e9158152.jpg"
+                        coverImage: "https://i1.hdslb.com/bfs/archive/6394917b69efc5102dbda45b82044d25e9158152.jpg"
                     },
 					{
                         id: 5,
@@ -869,7 +869,7 @@
                         chineseLink: "https://www.bilibili.com/video/BV1UEb8zXEdn",
                         englishLink: "https://x.com/UryanKarl/status/1957354397178163511",
                         bvid: "BV1UEb8zXEdn",
-                        coverImage: "https:////i2.hdslb.com/bfs/archive/bf716dda1a857b2eb1a96aed5e0bd538d518cd39.jpg"
+                        coverImage: "https://i2.hdslb.com/bfs/archive/bf716dda1a857b2eb1a96aed5e0bd538d518cd39.jpg"
                     },
 					{
                         id: 6,
