--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
                         chineseLink: "https://www.bilibili.com/video/BV1EUVqzpEnh/",
                         englishLink: "https://x.com/UryanKarl/status/1919328501749998045",
                         bvid: "BV1EUVqzpEnh",
-                        coverImage: "https://i0.hdslb.com/bfs/archive/41a6e32ad41664ad3b4d31b4dd648fb8200670f4.jpg"
+                        coverImage: "https://img.remit.ee/api/file/BQACAgUAAyEGAASHRsPbAAEN7WhpR8OaB223v8lbh1VhTn3l-rKO4wACGB4AAi-0QVYY8g3sEYGtTzYE.jpg"
                     },
 					{
                         id: 2,
@@ -592,7 +592,7 @@
                         chineseLink: "https://www.bilibili.com/video/BV15PEEzMEiM",
                         englishLink: "https://x.com/UryanKarl/status/1919328501749998045",
                         bvid: "BV15PEEzMEiM",
-                        coverImage: "https:////i1.hdslb.com/bfs/archive/7acbd3d6a013ebe46b4bbc4d55b845b3ddbc6b82.jpg"
+                        coverImage: "https://img.remit.ee/api/file/BQACAgUAAyEGAASHRsPbAAEN7WZpR8Oa-uNstbiSP15qoRstmj020gACFh4AAi-0QVYjSw3G9fU_PjYE.jpg"
                     },
                     {
                         id: 3,
@@ -604,7 +604,7 @@
                         chineseLink: "https://www.bilibili.com/video/BV1SnLmzME8u/",
                         englishLink: "https://x.com/UryanKarl/status/1917085258551595023",
                         bvid: "BV1SnLmzME8u",
-                        coverImage: "https://i0.hdslb.com/bfs/archive/9ea5bc896aa40d66c223352df786f9e6934c2a77.jpg"
+                        coverImage: "https://img.remit.ee/api/file/BQACAgUAAyEGAASHRsPbAAEN7WppR8Oht8PvHFPp7fftO9CZtn2UwAACGh4AAi-0QVZkexUYBONdezYE.jpg"
                     },
 					{
                         id: 4,
@@ -616,7 +616,7 @@
                         chineseLink: "https://www.bilibili.com/video/BV1DVhJzPEE7",
                         englishLink: "https://x.com/UryanKarl/status/1977595873824760010",
                         bvid: "BV1DVhJzPEE7",
-                        coverImage: "https:////i1.hdslb.com/bfs/archive/6394917b69efc5102dbda45b82044d25e9158152.jpg"
+                        coverImage: "https://img.remit.ee/api/file/BQACAgUAAyEGAASHRsPbAAEN7WlpR8OahbojFzHzzvcKo3VuxKEghQACGR4AAi-0QVYN0PA_1ymYIzYE.jpg"
                     },
 					{
                         id: 5,
@@ -628,7 +628,7 @@
                         chineseLink: "https://www.bilibili.com/video/BV1UEb8zXEdn",
                         englishLink: "https://x.com/UryanKarl/status/1977595873824760010",
                         bvid: "BV1UEb8zXEdn",
-                        coverImage: "https:////i2.hdslb.com/bfs/archive/bf716dda1a857b2eb1a96aed5e0bd538d518cd39.jpg"
+                        coverImage: "https://img.remit.ee/api/file/BQACAgUAAyEGAASHRsPbAAEN7WdpR8Oai-B3UPfKPJMW1nYk65ANdAACFx4AAi-0QVabQMSwKUiDoTYE.jpg"
                     },
 					{
                         id: 6,
@@ -640,7 +640,7 @@
                         chineseLink: "https://www.bilibili.com/video/BV1ZCxez3ECk/",
                         englishLink: "https://x.com/UryanKarl/status/1977595873824760010",
                         bvid: "BV1ZCxez3ECk",
-                        coverImage: "https://i1.hdslb.com/bfs/archive/1696c57b6c9f93b8e299e19f91094fc29375a349.jpg"
+                        coverImage: "https://img.remit.ee/api/file/BQACAgUAAyEGAASHRsPbAAEN7WtpR8Ohcwi8SpuLhHYS1ndiV5mDOgACGx4AAi-0QVaLCj4oyqpxsTYE.jpg"
                     },
                     {
                         id: 7,
@@ -652,7 +652,7 @@
                         chineseLink: "https://www.bilibili.com/video/BV15N1WBTEb9",
                         englishLink: "https://x.com/UryanKarl/status/1986813834653564935",
                         bvid: "BV15N1WBTEb9",
-                        coverImage: "https://i1.hdslb.com/bfs/archive/7d774b1fe22e0e98e9b223707629c2f3661fa62b.jpg"
+                        coverImage: "https://img.remit.ee/api/file/BQACAgUAAyEGAASHRsPbAAEN7WVpR8OZufKgZh-kuNe_zNDt0ZiiKQACFR4AAi-0QVaNa5IObu4-izYE.jpg"
                     }
                 ],
                 illustrations: [
@@ -689,7 +689,6 @@
                         englishLink: "https://x.com/UryanKarl/status/1898760283700809949",
                         coverImage: "https://img.remit.ee/api/file/BQACAgUAAyEGAASHRsPbAAEN7TxpR7xbjhCodd4HRxBaSyUpaQaLMgAC3h0AAi-0QValdypS1zxIyzYE.jpg"
                     },
-					
 					{
                         id: 4,
                         title: "鼹鼠星穹",
@@ -701,7 +700,6 @@
                         englishLink: "https://x.com/UryanKarl/status/1898907637774713333",
                         coverImage: "https://img.remit.ee/api/file/BQACAgUAAyEGAASHRsPbAAEN7VdpR8CG-HjyB1CgKseoyXPk_797GQAC-x0AAi-0QVa5-jWHJafZ_zYE.jpg"
                     },
-					
 					{
                         id: 5,
                         title: "王妃坐",
@@ -799,7 +797,7 @@
                 siteDescription: "Amphoreus FanWork",
                 footerTitle: "Library of MyDawn",
                 footerDescription: "Amphoreus FanWork Site | Admin: 伊水_Uryan",
-                footerCopyright: "© 2025 Library of MyDawn | This site showcases Honkai: Star Rail fanworks",
+                footerCopyright: "© 2025 Library of MyDawn | This site showcases Uryan's HSR Mydei/Phainon fanworks",
                 featuredTitle: "Latest Animation",
                 episodesTitle: "Library's Video Archive",
                 illustrationsTitle: "Library's Art Gallery",
@@ -821,7 +819,7 @@
                         chineseLink: "https://www.bilibili.com/video/BV1EUVqzpEnh/",
                         englishLink: "https://x.com/UryanKarl/status/1919328501749998045",
                         bvid: "BV1EUVqzpEnh",
-                        coverImage: "https://i0.hdslb.com/bfs/archive/41a6e32ad41664ad3b4d31b4dd648fb8200670f4.jpg"
+                        coverImage: "https://img.remit.ee/api/file/BQACAgUAAyEGAASHRsPbAAEN7WhpR8OaB223v8lbh1VhTn3l-rKO4wACGB4AAi-0QVYY8g3sEYGtTzYE.jpg"
                     },
 					{
                         id: 2,
@@ -833,7 +831,7 @@
                         chineseLink: "https://www.bilibili.com/video/BV15PEEzMEiM",
                         englishLink: "https://x.com/UryanKarl/status/1921952005532102743",
                         bvid: "BV15PEEzMEiM",
-                        coverImage: "https://i1.hdslb.com/bfs/archive/7acbd3d6a013ebe46b4bbc4d55b845b3ddbc6b82.jpg"
+                        coverImage: "https://img.remit.ee/api/file/BQACAgUAAyEGAASHRsPbAAEN7WZpR8Oa-uNstbiSP15qoRstmj020gACFh4AAi-0QVYjSw3G9fU_PjYE.jpg"
                     },
                     {
                         id: 3,
@@ -845,7 +843,7 @@
                         chineseLink: "https://www.bilibili.com/video/BV1SnLmzME8u/",
                         englishLink: "https://x.com/UryanKarl/status/1917085258551595023",
                         bvid: "BV1SnLmzME8u",
-                        coverImage: "https://i0.hdslb.com/bfs/archive/9ea5bc896aa40d66c223352df786f9e6934c2a77.jpg"
+                        coverImage: "https://img.remit.ee/api/file/BQACAgUAAyEGAASHRsPbAAEN7WppR8Oht8PvHFPp7fftO9CZtn2UwAACGh4AAi-0QVZkexUYBONdezYE.jpg"
                     },
 					{
                         id: 4,
@@ -857,7 +855,7 @@
                         chineseLink: "https://www.bilibili.com/video/BV1DVhJzPEE7",
                         englishLink: "https://x.com/UryanKarl/status/1951536670299529344",
                         bvid: "BV1DVhJzPEE7",
-                        coverImage: "https://i1.hdslb.com/bfs/archive/6394917b69efc5102dbda45b82044d25e9158152.jpg"
+                        coverImage: "https://img.remit.ee/api/file/BQACAgUAAyEGAASHRsPbAAEN7WlpR8OahbojFzHzzvcKo3VuxKEghQACGR4AAi-0QVYN0PA_1ymYIzYE.jpg"
                     },
 					{
                         id: 5,
@@ -869,7 +867,7 @@
                         chineseLink: "https://www.bilibili.com/video/BV1UEb8zXEdn",
                         englishLink: "https://x.com/UryanKarl/status/1957354397178163511",
                         bvid: "BV1UEb8zXEdn",
-                        coverImage: "https://i2.hdslb.com/bfs/archive/bf716dda1a857b2eb1a96aed5e0bd538d518cd39.jpg"
+                        coverImage: "https://img.remit.ee/api/file/BQACAgUAAyEGAASHRsPbAAEN7WdpR8Oai-B3UPfKPJMW1nYk65ANdAACFx4AAi-0QVabQMSwKUiDoTYE.jpg"
                     },
 					{
                         id: 6,
@@ -881,7 +879,7 @@
                         chineseLink: "https://www.bilibili.com/video/BV1ZCxez3ECk/",
                         englishLink: "https://x.com/UryanKarl/status/1977595873824760010",
                         bvid: "BV1ZCxez3ECk",
-                        coverImage: "https://i1.hdslb.com/bfs/archive/1696c57b6c9f93b8e299e19f91094fc29375a349.jpg"
+                        coverImage: "https://img.remit.ee/api/file/BQACAgUAAyEGAASHRsPbAAEN7WtpR8Ohcwi8SpuLhHYS1ndiV5mDOgACGx4AAi-0QVaLCj4oyqpxsTYE.jpg"
                     },
                     {
                         id: 7,
@@ -893,7 +891,7 @@
                         chineseLink: "https://www.bilibili.com/video/BV15N1WBTEb9",
                         englishLink: "https://x.com/UryanKarl/status/1986813834653564935",
                         bvid: "BV15N1WBTEb9",
-                        coverImage: "https://i1.hdslb.com/bfs/archive/7d774b1fe22e0e98e9b223707629c2f3661fa62b.jpg"
+                        coverImage: "https://img.remit.ee/api/file/BQACAgUAAyEGAASHRsPbAAEN7WVpR8OZufKgZh-kuNe_zNDt0ZiiKQACFR4AAi-0QVaNa5IObu4-izYE.jpg"
                     }
                 ],
                 illustrations: [
