--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
 
             .admin-info {
                 width: 100%;
-                text-align: center;
+                text-align: left;
                 font-size: 0.8rem;
                 order: 3;
                 padding-top: 0.5rem;
@@ -533,7 +533,7 @@
 
             .language-switcher {
                 position: absolute;
-                top: 0.8rem;
+                top: 5.8rem;
                 right: 1rem;
                 z-index: 1001;
             }
