--- a/index.html
+++ b/index.html
@@ -1290,10 +1290,10 @@
                 categoryMeme: "Meme",
                 // 新增导航菜单文本
                 navFeatured: "Latest Animation",
-                navEpisodes: "Library's Video Archive",
-                navIllustrations: "Library's Art Gallery",
-                navResearch: "Library's Research Room",
-                navSkin: "Library's Stationery"
+                navEpisodes: "Video Archive",
+                navIllustrations: "Art Gallery",
+                navResearch: "Research Room",
+                navSkin: "Stationery"
             }
         };
 
