--- a/index.html
+++ b/index.html
@@ -1286,6 +1286,15 @@
                 bvid: "BV1yFUTBjEGw",
                 coverImage: "https://img.remit.ee/api/file/BQACAgUAAyEGAASHRsPbAAEN7cNpR9v6954n_TienprGVQPwx8Us6gACnx4AAi-0QVZYolB22AR59jYE.png"
             },
+            {
+                id: 202,
+                type: 'research',
+                updateDateISO: "2025-11-24",
+                chineseLink: "https://www.bilibili.com/video/BV12DSYBcExV/",
+                englishLink: "https://www.bilibili.com/video/BV12DSYBcExV/",
+                bvid: "BV12DSYBcExV",
+                coverImage: "https://img.remit.ee/api/file/BQACAgUAAyEGAASHRsPbAAEN89tpSMKIZhlSVx-ob46g3C5zrb5q1AACoioAAi-0SVabYLDpfVZluDYE.png"
+            },
             // ===== 输入法皮肤 (type: 'skin') =====
             {
                 id: 301,
@@ -1323,6 +1332,7 @@
                 102: { title: "纯蓝", tags: ["原曲是COP的《纯蓝》"] },
                 // 考据视频标题和标签
                 201: { title: "米哈游如何用三种羊隐喻白厄", tags: ["羊塑", "考据"] },
+                202: { title: "米哈游如何用狮羊隐喻敌厄", tags: ["狮塑","羊塑", "考据"] },
                 // 皮肤标题和标签
                 301: { title: "麦田中的比格椰 搜狗皮肤", tags: ["仅限PC端", "动态特效"] },
                 302: { title: "蜜果羹的移动堡垒 搜狗皮肤", tags: ["仅限PC端", "动态特效"] },
@@ -1340,7 +1350,8 @@
                 101: { title: "“May You Be Ever Victorious, Mademus”", tags: ["After 3.1 Story"] },
                 102: { title: "Pure Blue", tags: ["Original song: COP - Pure Blue"] },
                 // Research Videos
-                201: { title: "How hyv use Goat, Oryx and Sheep to metaphorize Phainon", tags: ["metaphor", "research"] },
+                201: { title: "How hyv use Yang to metaphorize Phainon", tags: ["metaphor", "Yang=goat&sheep&oryx"] },
+                202: { title: "[CN only]How HYV use Lion and Yang to metaphorize Mydei and Phainon", tags: ["metaphor", "research"] },
                 // Skins
                 301: { title: "Beagle Coconut", tags: ["Sogou Pinin Input Skin","PC only"] },
                 302: { title: "Fig Stew", tags: ["Sogou Pinin Input Skin","PC only"] },
