--- a/index.html
+++ b/index.html
@@ -1163,6 +1163,16 @@
                         bvid: "BV15N1WBTEb9",
                         coverImage: "https://img.remit.ee/api/file/BQACAgUAAyEGAASHRsPbAAEN7WVpR8OZufKgZh-kuNe_zNDt0ZiiKQACFR4AAi-0QVaNa5IObu4-izYE.jpg"
                     },
+                    {
+                        id: 10,
+						type: 'episode',
+                        storyOrder: 10,
+                        updateDateISO: "2025-12-31",
+                        chineseLink: "https://www.bilibili.com/video/BV15ZvaBvEJr/",
+                        englishLink: "https://x.com/UryanKarl/status/2006324367068938702",
+                        bvid: "BV15ZvaBvEJr",
+                        coverImage: "https://img.remit.ee/api/file/BQACAgUAAyEGAASHRsPbAAEOw-JpVQd-cO44nbrWZYPdt4H8S2Ao-wACJjoAAnnVqFbVoa_cQkx0EjgE.jpg"
+                    },
             // ===== 插画 (type: 'illustration') =====
             {
                 id: 101,
@@ -1327,6 +1337,7 @@
                 5: { title: "白厄和万敌算哪门子宿敌啊", tags: ["吃播", "微量夏雅"] },
                 6: { title: "哥们！？你是在跟我开玩笑吗！？", tags: ["别跟万敌开玩笑", "白厄能怀孕（确信）"] },
                 7: { title: "万敌，你为什么戴着蓝宝石耳坠？", tags: ["永劫回归33550337", "万敌的树庭留学记", "（上篇）"] },
+                10: { title: "奇美拉为什么一直跟着我", tags: ["某一次永劫回归", "蜜果羹", "盗火行者"] },
                 // 插画标题和标签
                 101: { title: "“祝你战无不胜，迈德漠斯”", tags: ["3.1玩后感"] },
                 102: { title: "纯蓝", tags: ["原曲是COP的《纯蓝》"] },
@@ -1346,6 +1357,7 @@
                 5: { title: "Bros are just keep eating honey cakes", tags: ["ASMR(what)", "(a little bit Anagleae)"] },
                 6: { title: "Bro are you joking!?", tags: ["that's not a joke","Mpreg(sort of)"] },
                 7: { title: "Mydei, why are you wearing that sapphire earing?", tags: ["cycle#33550337", "Mydei in the Grove", "1/3"] },
+                10: { title: "Once a cycle, FR was followed by a chimera.", tags: ["Fig Stew", "Flame Reaver"] },
                 // Illustrations
                 101: { title: "“May You Be Ever Victorious, Mademus”", tags: ["After 3.1 Story"] },
                 102: { title: "Pure Blue", tags: ["Original song: COP - Pure Blue"] },
